smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/version-not-enough-parts.smithy
// Smithy version number should have 2 or 3 parts: 1
$version: "1"
